# robotics_utils

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yaml
examples/: collision_model_example.yaml
examples/meshes/open_drawer/: material.lib
scripts/: apriltag_detection_demo.py  bounding_box_detection_demo.py  fiducial_tracker_node.py  gemini_keypoint_service.py  gemini_subprocess_demo.py  keypoint_detection_demo.py  navigation_planning_demo.py  noisy_poses_rviz_demo.py  object_detection_demo.py  occupancy_grid_demo.py  path_planning_demo.py  plane_estimation_demo.py  realsense_demo.py  record_transforms.py  run_skills_cli.py  sam3_demo.py  skills_node.py  visualize_collision_model.py  visualize_collision_models.py  visualize_real_world_navigation.py
tests/: collision_model_strategies.py  common_strategies.py  hypothesis_strategies.py  kinematics_strategies.py  test_aabb.py  test_bounding_box.py  test_container_model.py  test_container_state.py  test_distances.py  test_dorfl_skills.py  test_images.py  test_kinematic_tree.py  test_parameters.py  test_paths.py  test_point3d.py  test_pointcloud.py  test_pose2d.py  test_pose3d.py  test_pose_estimate_averager.py  test_predicate.py  test_process_python.py  test_rotations.py  test_skills.py  test_string_utils.py  test_viewpoints.py  test_vision_utils.py  test_visual_fiducials.py  vision_strategies.py
tests/classical_planning/: test_predicates.py
tests/collision_models/: collision_model_strategies.py  test_aabb.py
tests/examples/: dorfl_skills.py
tests/fixtures/: pddl_fixtures.py
tests/fol/: test_unification.py
tests/io/: test_process_python.py  test_string_utils.py
tests/kinematics/: kinematics_strategies.py  test_kinematic_tree.py  test_point3d.py  test_pose3d.py  test_rotations.py
tests/pddl/: conftest.py  test_pddl_parser.py  test_pddl_scanner.py
tests/pddl_examples/: DepotSTRIPS.pddl
tests/perception/: test_pose_estimate_averager.py  test_visual_fiducials.py
tests/predicates/: test_dataclass_type.py  test_parameters.py  test_predicate.py
tests/skills/: skills_strategies.py  test_dorfl_skills.py  test_skill_inventory.py  test_skills.py
tests/strategies/: collision_model_strategies.py  common_strategies.py  geometry_strategies.py  skills_strategies.py  spatial_strategies.py  vision_strategies.py
tests/test_data/: container_env.yaml  example_environment.yaml  filing_cabinets_env.yaml  markers_example.yaml
tests/vision/: test_images.py  test_vision_utils.py  vision_strategies.py
tests/world_models/: test_container_model.py
(+344 files in other folders)
